@@ -2,6 +2,7 @@ Development Portal (2019-12-09 shi)
 ==============================
 Fix sector group and category icons and text
 Fix dflat SAVi date div
+Add glossary for Sector graphs
 
 
 Development Portal (2019-11-21 shi)
